[gd_scene load_steps=2 format=3 uid="uid://d3gr6sqfpx2l2"]

[ext_resource type="Script" path="res://List/List.gd" id="1_2yukt"]

[node name="List" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_2yukt" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Button" parent="VBoxContainer"]
offset_right = 1080.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 50
text = "List Title"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
offset_top = 81.0
offset_right = 1080.0
offset_bottom = 1920.0
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewItem" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_right = 150.0
theme_override_font_sizes/font_size = 40
text = "New
Item"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="ExistingItem" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -150.0
theme_override_font_sizes/font_size = 40
text = "Existing
Item"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[connection signal="pressed" from="VBoxContainer/Title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="NewItem" to="." method="_on_new_item_pressed"]
[connection signal="pressed" from="ExistingItem" to="." method="_on_existing_item_pressed"]
